@@ -30,12 +30,14 @@ function wfSpecialImport( $page = '' ) {
 	global $wgImportTargetNamespace;
 
 	$interwiki = false;
+	$articleName = '';
 	$namespace = $wgImportTargetNamespace;
 	$frompage = '';
 	$history = true;
 
 	if( $wgRequest->wasPosted() && $wgRequest->getVal( 'action' ) == 'submit') {
 		$isUpload = false;
+		$articleName = htmlspecialchars( $wgRequest->getText( 'articlename' ) );
 		$namespace = $wgRequest->getIntOrNull( 'namespace' );
 
 		switch( $wgRequest->getVal( "source" ) ) {
@@ -61,7 +63,7 @@ function wfSpecialImport( $page = '' ) {
 		}
 
 		if( WikiError::isError( $source ) ) {
-			$wgOut->addWikiText( wfEscapeWikiText( $source->getMessage() ) );
+			$wgOut->addWikiText( '<p class="error">' . wfMsg( "importfailed", wfEscapeWikiText( $source->getMessage() ) ) . '</p>' );
 		} else {
 			$wgOut->addWikiText( wfMsg( "importstart" ) );
 
@@ -69,19 +71,26 @@ function wfSpecialImport( $page = '' ) {
 			if( !is_null( $namespace ) ) {
 				$importer->setTargetNamespace( $namespace );
 			}
+			if( !is_null( $articleName ) ) {
+				$importer->setTargetArticleName( $articleName );
+			}
 			$reporter = new ImportReporter( $importer, $isUpload, $interwiki );
 
 			$reporter->open();
 			$result = $importer->doImport();
-			$reporter->close();
+			$resultCount = $reporter->close();
 
 			if( WikiError::isError( $result ) ) {
-				$wgOut->addWikiText( wfMsg( "importfailed",
-					wfEscapeWikiText( $result->getMessage() ) ) );
+				# No source or XML parse error
+				$wgOut->addWikiText( '<p class="error">' . wfMsg( "importfailed", wfEscapeWikiText( $result->getMessage() ) ) . '</p>' );
+			} elseif( WikiError::isError( $resultCount ) ) {
+				# Zero revisions
+				$wgOut->addWikiText( '<p class="error">' . wfMsg( "importfailed", wfEscapeWikiText( $resultCount->getMessage() ) ) . '</p>' );
 			} else {
 				# Success!
 				$wgOut->addWikiText( wfMsg( "importsuccess" ) );
 			}
+			$wgOut->addWikiText( '<hr />' );
 		}
 	}
 
@@ -89,18 +98,17 @@ function wfSpecialImport( $page = '' ) {
 
 	if( $wgUser->isAllowed( 'importupload' ) ) {
 		$wgOut->addWikiText( wfMsg( "importtext" ) );
-		$wgOut->addHTML( "
-<fieldset>
-	<legend>" . wfMsgHtml('upload') . "</legend>
-	<form enctype='multipart/form-data' method='post' action=\"$action\">
-		<input type='hidden' name='action' value='submit' />
-		<input type='hidden' name='source' value='upload' />
-		<input type='hidden' name='MAX_FILE_SIZE' value='2000000' />
-		<input type='file' name='xmlimport' value='' size='30' />
-		<input type='submit' value=\"" . wfMsgHtml( "uploadbtn" ) . "\" />
-	</form>
-</fieldset>
-" );
+		$wgOut->addHTML( 
+			Xml::openElement( 'fieldset' ).
+			Xml::element( 'legend', null, wfMsg( 'upload' ) ) .
+			Xml::openElement( 'form', array( 'enctype' => 'multipart/form-data', 'method' => 'post', 'action' => $action ) ) .
+			Xml::hidden( 'action', 'submit' ) .
+			Xml::hidden( 'source', 'upload' ) .
+			Xml::hidden( 'MAX_FILE_SIZE', '2000000' ) .
+			"<input type='file' name='xmlimport' value='' size='30' />" . // No Xml function for type=file? Todo?
+			Xml::submitButton( wfMsg( 'uploadbtn' ) ) . 
+			Xml::closeElement( 'form' ) .
+			Xml::closeElement( 'fieldset' ) );
 	} else {
 		if( empty( $wgImportSources ) ) {
 			$wgOut->addWikiText( wfMsg( 'importnosources' ) );
@@ -108,53 +116,57 @@ function wfSpecialImport( $page = '' ) {
 	}
 
 	if( !empty( $wgImportSources ) ) {
-		$wgOut->addHTML( "
-<fieldset>
-	<legend>" . wfMsgHtml('importinterwiki') . "</legend>
-	<form method='post' action=\"$action\">" .
-		$wgOut->parse( wfMsg( 'import-interwiki-text' ) ) . "
-		<input type='hidden' name='action' value='submit' />
-		<input type='hidden' name='source' value='interwiki' />
-		<table>
-			<tr>
-				<td>
-					<select name='interwiki'>" );
+		$wgOut->addHTML(
+			Xml::openElement( 'fieldset' ) .
+			Xml::element( 'legend', null, wfMsg( 'importinterwiki' ) ) .
+			Xml::openElement( 'form', array( 'method' => 'post', 'action' => $action ) ) .
+			wfMsgExt( 'import-interwiki-text', array( 'parse' ) ) .
+			Xml::hidden( 'action', 'submit' ) .
+			Xml::hidden( 'source', 'interwiki' ) .
+			Xml::openElement( 'table' ) .
+			"<tr>
+				<td>" .
+					Xml::openElement( 'select', array( 'name' => 'interwiki' ) ) );
 		foreach( $wgImportSources as $prefix ) {
 			$iw = htmlspecialchars( $prefix );
 			$selected = ($interwiki === $prefix) ? ' selected="selected"' : '';
-			$wgOut->addHTML( "<option value=\"$iw\"$selected>$iw</option>\n" );
+			$wgOut->addHTML( Xml::option( $iw, $iw, $selected ) );
 		}
-		$wgOut->addHTML( "
-					</select>
-				</td>
+		$wgOut->addHTML( 
+					Xml::closeElement( 'select' ) .
+				"</td>
 				<td>" .
-					wfInput( 'frompage', 50, $frompage ) .
+					Xml::input( 'frompage', 50, $frompage ) .
 				"</td>
 			</tr>
 			<tr>
 				<td></td>
 				<td>" .
-					wfCheckLabel( wfMsg( 'import-interwiki-history' ),
-						'interwikiHistory', 'interwikiHistory', $history ) .
+					Xml::checkLabel( wfMsg( 'import-interwiki-history' ), 'interwikiHistory', 'interwikiHistory', $history ) .
 				"</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td>
-					" . wfMsgHtml( 'import-interwiki-namespace' ) . " " .
-						HTMLnamespaceselector( $namespace, '' ) . "
-				</td>
 			</tr>
 			<tr>
 				<td></td>
 				<td>" .
-					wfSubmitButton( wfMsg( 'import-interwiki-submit' ) ) .
+					Xml::inputLabel( wfMsg( 'import-articlename' ), 'articlename', 'articlename', 50, $articleName ) .
 				"</td>
 			</tr>
-		</table>
-	</form>
-</fieldset>
-" );
+			<tr>
+				<td></td>
+				<td>" .
+					Xml::label( wfMsg( 'import-interwiki-namespace' ), 'namespace' ) .
+					Xml::namespaceSelector( $namespace, '' ) .
+				"</td>
+			</tr>
+			<tr>
+				<td></td>
+				<td>" .
+					Xml::submitButton( wfMsg( 'import-interwiki-submit' ) ) . 
+				"</td>
+			</tr>" .
+			Xml::closeElement( 'table' ).
+			Xml::closeElement( 'form' ) .
+			Xml::closeElement( 'fieldset' ) );
 	}
 }
 
@@ -185,12 +197,12 @@ class ImportReporter {
 		$localCount = $wgLang->formatNum( $successCount );
 		$contentCount = $wgContLang->formatNum( $successCount );
 
-		$wgOut->addHtml( "<li>" . $skin->makeKnownLinkObj( $title ) .
-			" " .
-			wfMsgExt( 'import-revision-count', array( 'parsemag', 'escape' ), $localCount ) .
-			"</li>\n" );
-
 		if( $successCount > 0 ) {
+			$wgOut->addHtml( "<li>" . $skin->makeKnownLinkObj( $title ) .
+				" " .
+				wfMsgExt( 'import-revision-count', array( 'parsemag', 'escape' ), $localCount ) .
+				"</li>\n" );
+
 			$log = new LogPage( 'import' );
 			if( $this->mIsUpload ) {
 				$detail = wfMsgForContent( 'import-logentry-upload-detail',
@@ -209,15 +221,21 @@ class ImportReporter {
 			$nullRevision = Revision::newNullRevision(
 				$dbw, $title->getArticleId(), $comment, true );
 			$nullRevision->insertOn( $dbw );
+		} else {
+			$wgOut->addHtml( '<li>' . wfMsgExt( 'import-nonewrevisions', array( 'parse', ) ) . '</li>' );
 		}
+
 	}
 
 	function close() {
 		global $wgOut;
 		if( $this->mPageCount == 0 ) {
-			$wgOut->addHtml( "<li>" . wfMsgHtml( 'importnopages' ) . "</li>\n" );
+			$wgOut->addHtml( "</ul>\n" );
+			return new WikiErrorMsg( "importnopages" );
 		}
 		$wgOut->addHtml( "</ul>\n" );
+
+		return $this->mPageCount;
 	}
 }
 
@@ -393,6 +411,7 @@ class WikiImporter {
 	var $mPageOutCallback = null;
 	var $mRevisionCallback = null;
 	var $mTargetNamespace = null;
+	var $mTargetArticleName = null;
 	var $lastfield;
 
 	function WikiImporter( $source ) {
@@ -425,7 +444,7 @@ class WikiImporter {
 			$chunk = $this->mSource->readChunk();
 			if( !xml_parse( $parser, $chunk, $this->mSource->atEnd() ) ) {
 				wfDebug( "WikiImporter::doImport encountered XML parsing error\n" );
-				return new WikiXmlError( $parser, 'XML import parse failure', $chunk, $offset );
+				return new WikiXmlError( $parser, wfMsgHtml( 'import-parse-failure' ), $chunk, $offset );
 			}
 			$offset += strlen( $chunk );
 		} while( $chunk !== false && !$this->mSource->atEnd() );
@@ -498,6 +517,13 @@ class WikiImporter {
 		} else {
 			return false;
 		}
+	}
+
+	/**
+	 * Set a target articlename to override the defaults
+	 */
+	function setTargetArticleName( $articleName ) {
+		$this->mTargetArticleName = is_null( $articleName ) ? null : $articleName;
 	}
 
 	/**
@@ -677,6 +703,11 @@ class WikiImporter {
 		switch( $this->appendfield ) {
 		case "title":
 			$this->workTitle = $this->appenddata;
+
+			if( $this->mTargetArticleName != '' ) {
+				// Import article with a different target article name
+				$this->workTitle = $this->mTargetArticleName;
+			}
 			$this->origTitle = Title::newFromText( $this->workTitle );
 			if( !is_null( $this->mTargetNamespace ) && !is_null( $this->origTitle ) ) {
 				$this->pageTitle = Title::makeTitle( $this->mTargetNamespace,
@@ -876,6 +907,9 @@ class ImportStreamSource {
 	}
 
 	public static function newFromInterwiki( $interwiki, $page, $history=false ) {
+		if( $page == '' ) {
+			return new WikiErrorMsg( 'import-noarticle' );
+		}			
 		$link = Title::newFromText( "$interwiki:Special:Export/$page" );
 		if( is_null( $link ) || $link->getInterwiki() == '' ) {
 			return new WikiErrorMsg( 'importbadinterwiki' );
